refactor(crowdsec): consolidate traefik integration
Consolidates the integration of CrowdSec with Traefik by moving configuration and management responsibilities to the CrowdSec role. This simplifies Traefik's role and ensures a more cohesive setup.

- Moves Traefik dynamic configuration for CrowdSec from the Traefik role to the CrowdSec role.
- Defines shared directories for Traefik and CrowdSec in group_vars to improve organization.
- Updates Traefik's task to remove redundant CrowdSec-related file operations.
- Modifies the CrowdSec role to create the Traefik bouncer configuration directly.
- Renames the CrowdSec Traefik template to reflect its new location within the CrowdSec role.
- Updates Traefik's Docker volume mounts to use the consolidated dynamic configuration directory.
- Updates README.md to reflect the change in CrowdSec iptables firewall responsibility.

--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -37,6 +37,11 @@ ansible_python_interpreter: /usr/bin/python3
 docker_home: /home/{{ admin_username }}/docker_data
 files_home: /home/{{ admin_username }}/Files
 
+# Traefik Directories (Shared with CrowdSec)
+traefik_data_directory: "{{ docker_home }}/traefik"
+traefik_logs_directory: "{{ traefik_data_directory }}/logs"
+traefik_dynamic_configs_directory: "{{ traefik_data_directory }}/dynamic_configs"
+
 ##
 ## Galaxy extensions
 ##
