--- a/roles/crowdsec/tasks/main.yml
+++ b/roles/crowdsec/tasks/main.yml
@@ -9,7 +9,8 @@
 #     path: "{{ item }}"
 #     state: absent
 #   with_items:
-#     - "{{ crowdsec_directory }}"
+# - "{{ crowdsec_data_directory }}"
+# - "{{ crowdsec_config_directory }}"
 
 - name: Create CrowdSec Directories
   ansible.builtin.file:
@@ -64,8 +65,6 @@
       COLLECTIONS: "{{ crowdsec_collections | join(' ') }}"
       GID: "{{ ansible_facts.getent_passwd[admin_username][2] }}"
       UID: "{{ ansible_facts.getent_passwd[admin_username][1] }}"
-      # ENROLL_KEY: "{{ crowdsec_enroll_key }}"
-      # ENROLL_INSTANCE_NAME: "{{ crowdsec_instance_name }}"
 
 - name: Wait for CrowdSec LAPI to be ready
   ansible.builtin.command: docker exec crowdsec cscli lapi status
@@ -75,20 +74,19 @@
   delay: 2
   changed_when: false
 
-# because of this config crowdsec provision has to be deployed with traefik now
-# I should never delete this bouncer, only if dynamic config in traefik doesnt exist
-# or create dynamic config for traefik here on this role
 - name: Create Traefik Bouncer
   ansible.builtin.shell: |
     docker exec crowdsec cscli bouncers delete traefik-bouncer || true
     docker exec crowdsec cscli bouncers add traefik-bouncer -o raw
   register: crowdsec_bouncer_key_output
 
-- name: Write Bouncer Key to temporary file
-  ansible.builtin.copy:
-    content: "{{ crowdsec_bouncer_key_output.stdout }}"
-    dest: "/tmp/crowdsec_traefik_bouncer.key"
-    mode: "0600"
+- name: Configure CrowdSec Middleware for Traefik
+  ansible.builtin.template:
+    src: traefik_crowdsec.toml.j2
+    dest: "{{ traefik_dynamic_configs_directory }}/crowdsec.toml"
+    mode: "0644"
+  vars:
+    crowdsec_api_key: "{{ crowdsec_bouncer_key_output.stdout }}"
 
 - name: Schedule CrowdSec hub update and upgrade
   ansible.builtin.cron:
