feat(provisioning): add bentopdf role
Adds the BentoPDF application to the provisioning system, enabling its deployment and integration with Traefik for external access.

- Creates a new `bentopdf` role with default configurations for image, subdomain, and memory.
- Integrates the `bentopdf` role into the `provisioning.yml` playbook, making it runnable via Ansible.
- Configures Traefik labels for the BentoPDF container to enable external access via a subdomain and apply middleware for authentication and security headers.
- Adds BentoPDF to the list of applications in the README.md, including its subdomain and port.
- Updates `inventories/sample/group_vars/sample.yml` to enable and configure the BentoPDF subdomain.
- Adds specific notes about potential false positives from WebDAV and `.git` files in the `whitelist.yaml.j2` template for Crowdsec.

--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -126,3 +126,6 @@ threexui_subscription_subdomain: "3xsub"
 
 opencloud_enabled: true
 opencloud_subdomain: "cloud"
+
+bentopdf_enabled: true
+bentopdf_subdomain: "pdf"
