fix(bentopdf): update default image to bentopdf-simple
Updated the default Docker image for BentoPDF to use the `bentopdf-simple` tag for improved functionality.

- Changed `bentopdf_image` from `ghcr.io/alam00000/bentopdf:latest` to `bentopdf/bentopdf-simple:latest` in `roles/bentopdf/defaults/main.yml`.

--- a/roles/bentopdf/defaults/main.yml
+++ b/roles/bentopdf/defaults/main.yml
@@ -3,6 +3,6 @@ bentopdf_enabled: true
 bentopdf_available_externally: "true"
 
 bentopdf_subdomain: "pdf"
-bentopdf_image: "ghcr.io/alam00000/bentopdf:latest"
+bentopdf_image: "bentopdf/bentopdf-simple:latest"
 
 bentopdf_memory: "1g"
