feat(provisioning): add convertx application
Adds the ConvertX application to the provisioning system, enabling its deployment and integration with Traefik and Homepage.

- Creates a new role for ConvertX with default configurations and deployment tasks.
- Integrates ConvertX into the main provisioning playbook.
- Updates sample group variables to include ConvertX configuration.
- Adds ConvertX to the README's applications list.
- Includes commands to clean SSH known hosts for the domain.
- Updates the SSH config for the mayurifag-prod host.
- Adds TODO items to the README for future improvements.

--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -129,3 +129,6 @@ opencloud_subdomain: "cloud"
 
 bentopdf_enabled: true
 bentopdf_subdomain: "pdf"
+
+convertx_enabled: true
+convertx_subdomain: "convert"
