feat(ssh): configure tmux for remote sessions
Configures SSH to automatically start a tmux session on remote connections for improved workflow and session management.

- Added `tmux` to `mayurifag_general_extra_packages` in `roles/server_general_preparations/defaults/main.yml` to ensure tmux is installed.
- Modified `~/.ssh/config` in `README.md` to include `RequestTTY yes` and `RemoteCommand tmux attach -d || tmux new-session -s main` for the `mayurifag-prod` host.
- Added a new task to the "Thinking if I need it" section in `README.md` to consider tmux configuration and plugins.

--- a/roles/server_general_preparations/defaults/main.yml
+++ b/roles/server_general_preparations/defaults/main.yml
@@ -81,6 +81,7 @@ mayurifag_general_extra_packages:
   - ntp
   - rsyslog
   - software-properties-common
+  - tmux
   - unattended-upgrades
   - unzip
   - wget
