feat(roles): update icons to svg and adjust homepage details
This commit updates various service icons to use SVG format for better scalability and clarity. It also refines homepage details for several roles to improve organization and identification within the dashboard.

- Replaced .png icons with .svg equivalents for BentoPDF, Blocky, Netdata, Portainer, TinyAuth, Traefik, and Vaultwarden.
- Updated the homepage icon for MUS from "music.png" to "mdi-volume-high".
- Modified the homepage group for mayurifag_github_io from "Websites" to "Static" and updated its name to "mayurifag.github.io" with a "mdi-web-box" icon.
- Added a new task to the README.md for reporting docker unhealth via self-service.
- Added a new task to the README.md for migrating from Bentopdf to an alternative after tests.
- Added a new task to the README.md for downloading the Bandwhich binary to root.
- Added a new link to the README.md for "How-To-Secure-A-Linux-Server".
- Extended HTTP timeouts in traefik.toml.j2 for OpenCloud/Nextcloud large file operations.

--- a/roles/bentopdf/tasks/main.yml
+++ b/roles/bentopdf/tasks/main.yml
@@ -18,5 +18,5 @@
 
       homepage.group: "Services"
       homepage.name: "BentoPDF"
-      homepage.icon: "bentopdf.png"
+      homepage.icon: "bentopdf.svg"
       homepage.href: "https://{{ bentopdf_subdomain }}.{{ server_hostname }}"
