--- a/roles/mayurifag_github_io/tasks/main.yml
+++ b/roles/mayurifag_github_io/tasks/main.yml
@@ -17,7 +17,7 @@
       # traefik.http.routers.mayurifag_github_io.middlewares: "secure-headers@file"
       com.centurylinklabs.watchtower.enable: "true"
 
-      homepage.group: "Websites"
-      homepage.name: "Website"
-      homepage.icon: "globe.png"
+      homepage.group: "Static"
+      homepage.name: "mayurifag.github.io"
+      homepage.icon: "mdi-web-box"
       homepage.href: "https://{{ server_hostname }}"
