--- a/roles/mus/tasks/main.yml
+++ b/roles/mus/tasks/main.yml
@@ -21,5 +21,5 @@
 
       homepage.group: "Services"
       homepage.name: "mus"
-      homepage.icon: "music.png"
+      homepage.icon: "mdi-volume-high"
       homepage.href: "https://{{ mus_subdomain }}.{{ server_hostname }}"
