--- a/roles/vaultwarden/tasks/main.yml
+++ b/roles/vaultwarden/tasks/main.yml
@@ -24,5 +24,5 @@
 
       homepage.group: "Services"
       homepage.name: "Vaultwarden"
-      homepage.icon: "vaultwarden.png"
+      homepage.icon: "vaultwarden.svg"
       homepage.href: "https://{{ vaultwarden_subdomain }}.{{ server_hostname }}"
