feat(roles): enable mini-qr and simplify traefik configuration
Introduces the Mini-QR application and standardizes Traefik's `enable` label to `true` across all services. This simplifies configuration by removing the need for individual `available_externally` variables.

- Adds the `mini_qr` role with its default variables and tasks.
- Updates `provisioning.yml` to include the `mini_qr` role.
- Updates `README.md` to include Mini-QR in the applications list.
- Removes `*_available_externally` variables from all roles' default files.
- Sets `traefik.enable` to `true` in the `labels` section of all relevant role tasks.
- Updates the `bentopdf` role to set `traefik.enable` to `true`.
- Updates the `blocky` role to set `traefik.enable` to `true`.
- Updates the `convertx` role to set `traefik.enable` to `true`.
- Updates the `gitea` role to set `traefik.enable` to `true`.
- Updates the `hemmelig` role to set `traefik.enable` to `true`.
- Updates the `homepage` role to set `traefik.enable` to `true`.
- Updates the `lldap` role to set `traefik.enable` to `true`.
- Updates the `mayurifag_github_io` role to set `traefik.enable` to `true`.
- Updates the `mus` role to set `traefik.enable` to `true`.
- Updates the `netdata` role to set `traefik.enable` to `true`.
- Updates the `obsidian_livesync` role to set `traefik.enable` to `true`.
- Updates the `opencloud` role to set `traefik.enable` to `true`.
- Updates the `portainer` role to set `traefik.enable` to `true`.
- Updates the `vaultwarden` role to set `traefik.enable` to `true`.
- Updates the `watchtower` role to set `traefik.enable` to `true`.
- Removes the `available_externally` task from the `bentopdf` role.
- Removes the `available_externally` task from the `blocky` role.
- Removes the `available_externally` task from the `convertx` role.
- Removes the `available_externally` task from the `gitea` role.
- Removes the `available_externally` task from the `hemmelig` role.
- Removes the `available_externally` task from the `

--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -132,3 +132,6 @@ bentopdf_subdomain: "pdf"
 
 convertx_enabled: true
 convertx_subdomain: "convert"
+
+mini_qr_enabled: true
+mini_qr_subdomain: "qr"
