--- a/roles/blocky/tasks/main.yml
+++ b/roles/blocky/tasks/main.yml
@@ -61,7 +61,7 @@
       # - "53:53" # Do not expose 53 port, its open for DNS Amplification Attack
       - "853:853"
     labels:
-      traefik.enable: "{{ blocky_available_externally }}"
+      traefik.enable: "true"
       traefik.http.routers.blocky.rule: "Host(`{{ blocky_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.blocky.loadbalancer.server.port: "4000"
       # traefik.frontend.rule: "HostRegexp:{catchall:.*}"
