--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -63,7 +63,7 @@
     networks:
       - name: "web"
     labels:
-      traefik.enable: "{{ portainer_available_externally }}"
+      traefik.enable: "true"
       traefik.http.routers.portainer.rule: "Host(`{{ portainer_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.portainer.loadbalancer.server.port: "9000"
       traefik.http.routers.portainer.middlewares: "secure-headers@file"
