--- a/roles/hemmelig/tasks/main.yml
+++ b/roles/hemmelig/tasks/main.yml
@@ -25,7 +25,7 @@
     networks:
       - name: "web"
     labels:
-      traefik.enable: "{{ hemmelig_available_externally }}"
+      traefik.enable: "true"
       traefik.http.routers.hemmelig.rule: "Host(`{{ hemmelig_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.hemmelig.loadbalancer.server.port: "3000"
       traefik.http.routers.hemmelig.middlewares: "secure-headers@file"
