--- a/roles/vaultwarden/tasks/main.yml
+++ b/roles/vaultwarden/tasks/main.yml
@@ -17,7 +17,7 @@
     networks:
       - name: "web"
     labels:
-      traefik.enable: "{{ vaultwarden_available_externally }}"
+      traefik.enable: "true"
       traefik.http.routers.vaultwarden.rule: "Host(`{{ vaultwarden_subdomain }}.{{ server_hostname }}`)"
       traefik.http.services.vaultwarden.loadbalancer.server.port: "80"
       traefik.http.routers.vaultwarden.middlewares: "secure-headers@file"
