--- a/roles/server_general_preparations/tasks/dumbfile.yml
+++ b/roles/server_general_preparations/tasks/dumbfile.yml
@@ -6,6 +6,7 @@
     state: directory
     mode: "0777"
 
+# why this might take a lot of time?
 - name: Check if dumbfile exists
   ansible.builtin.stat:
     path: /var/dumb/dumbfile
