feat(server): add ufw firewall configuration
Introduces Uncomplicated Firewall (ufw) to manage server security by default. This includes installing ufw, setting up essential rules, and ensuring it's running.

- Installs ufw package on the server.
- Configures ufw to log all traffic, deny incoming by default, allow outgoing, and deny routed traffic.
- Opens port 22/tcp for SSH access.
- Opens port 443/tcp for HTTPS traffic, specifically for Traefik.
- Ensures the ufw service is started and enabled.
- Restarts systemd-journald and ufw services to apply changes.
- Includes tasks for ufw configuration within the server_general_preparations role.
- Adds a task to allow HTTPS traffic for Traefik in the traefik role.
- Debugs ufw status for IPv4 and IPv6.

--- a/roles/gitea/tasks/main.yml
+++ b/roles/gitea/tasks/main.yml
@@ -22,6 +22,11 @@
   with_items:
     - "{{ gitea_data_directory }}/"
 
+- name: Allow Gitea SSH (port {{ gitea_ssh_port }}/tcp)
+  ansible.builtin.command: ufw allow {{ gitea_ssh_port }}/tcp comment "Allow Gitea SSH ({{ gitea_ssh_port }}/tcp)"
+  register: ufw_gitea
+  changed_when: "'Rule added' in ufw_gitea.stdout"
+
 - name: Gitea Docker Container
   community.docker.docker_container:
     name: gitea
@@ -63,3 +68,8 @@
       homepage.name: "Gitea"
       homepage.icon: "gitea.png"
       homepage.href: "https://{{ gitea_subdomain }}.{{ server_hostname }}"
+
+- name: Restart Docker after new UFW rules are added
+  ansible.builtin.service:
+    name: docker
+    state: restarted
