--- a/roles/server_general_preparations/handlers/main.yml
+++ b/roles/server_general_preparations/handlers/main.yml
@@ -3,3 +3,8 @@
   ansible.builtin.systemd:
     name: systemd-journald
     state: restarted
+
+- name: Restart ufw
+  ansible.builtin.service:
+    name: ufw
+    state: restarted
