feat(linkwarden): add linkwarden bookmark manager
Integrates Linkwarden, a self-hosted bookmark manager, into the Ansible playbook. This allows for centralized management and organization of web links.

- Adds a new Ansible role `roles/linkwarden` for managing the Linkwarden service.
- Configures Linkwarden to use a PostgreSQL database for storage.
- Sets up Traefik routing for accessing Linkwarden via a subdomain.
- Integrates Linkwarden with the Homepage dashboard for easy access.
- Configures optional AI tagging using Gemini Flash, requiring an API key.
- Updates `provisioning.yml` to include the new Linkwarden role.
- Adds Linkwarden variables to `inventories/sample/group_vars/sample.yml`.
- Updates `README.md` to include Linkwarden in the Applications List.
- Modifies `roles/traefik/tasks/main.yml` to remove redundant Homepage label comment.
- Updates `roles/watchtower/tasks/main.yml` to add Watchtower to the 'web' network.
- Adds `STORAGE_SYSTEM_LOG_LEVEL: "error"` to `roles/opencloud/tasks/main.yml` to reduce log noise.
- Sets `UseDNS no` and `GSSAPIAuthentication no` in `roles/users/templates/sshd_config.j2` for faster SSH connections.
- Configures Traefik to expose containers on the 'web' network by default in `roles/traefik/templates/traefik.toml.j2`.
- Adds `alias systemctl='sudo systemctl'` to `roles/users/templates/.bashrc`.

--- a/provisioning.yml
+++ b/provisioning.yml
@@ -146,6 +146,11 @@
         - qr
       when: (mini_qr_enabled | default(False))
 
+    - role: linkwarden
+      tags:
+        - linkwarden
+      when: (linkwarden_enabled | default(False))
+
     - role: watchtower
       tags:
         - watchtower
