--- a/inventories/sample/group_vars/sample.yml
+++ b/inventories/sample/group_vars/sample.yml
@@ -134,3 +134,7 @@ convertx_subdomain: "convert"
 
 mini_qr_enabled: true
 mini_qr_subdomain: "qr"
+
+linkwarden_enabled: true
+linkwarden_subdomain: "bookmarks"
+linkwarden_openai_api_key: "set_this_to_your_google_ai_studio_key"
