--- a/roles/watchtower/tasks/main.yml
+++ b/roles/watchtower/tasks/main.yml
@@ -10,6 +10,8 @@
     env:
       WATCHTOWER_HTTP_API_TOKEN: "{{ watchtower_http_api_token }}"
     command: "{{ watchtower_command }}"
+    networks:
+      - name: "web"
     labels:
       traefik.enable: "true"
       traefik.http.routers.watchtower.rule: "Host(`{{ watchtower_subdomain }}.{{ server_hostname }}`)"
