chore(crowdsec): update image tag and README
Updates the CrowdSec Docker image tag to a specific version and refines a README entry for clarity.

- Changed `crowdsec_image` from `crowdsecurity/crowdsec:latest` to `crowdsecurity/crowdsec:v1.7.4` in `roles/crowdsec/defaults/main.yml` to pin to a stable version.
- Updated the README.md to clarify that multiple roles are to be removed in 2026, not just 'blocky'.

--- a/roles/crowdsec/defaults/main.yml
+++ b/roles/crowdsec/defaults/main.yml
@@ -5,7 +5,7 @@ crowdsec_directory: "{{ docker_home }}/crowdsec"
 crowdsec_data_directory: "{{ crowdsec_directory }}/data"
 crowdsec_config_directory: "{{ crowdsec_directory }}/config"
 
-crowdsec_image: crowdsecurity/crowdsec:latest
+crowdsec_image: crowdsecurity/crowdsec:v1.7.4
 
 # Ban duration (1 week)
 crowdsec_ban_duration: "168h"
