feat(server_general_preparations): add iptables backup task
Adds a new task to back up iptables rules before provisioning. This ensures that firewall configurations are preserved in case of unexpected issues during the server setup process.

- Created a new file `iptables_backup.yml` to handle the backup logic.
- Added tasks to create a backup directory, check for iptables and ip6tables executables, and save their rules to files.
- Included a README file in the backup directory with instructions for restoration and a warning about potential conflicts with Docker.
- Included the new `iptables_backup.yml` task in `main.yml` for server_general_preparations.

--- a/roles/server_general_preparations/tasks/main.yml
+++ b/roles/server_general_preparations/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: Include iptables backup tasks
+  ansible.builtin.include_tasks: iptables_backup.yml
+
 - name: Include hostname configuration
   ansible.builtin.include_tasks: hostname.yml
 
